--- a/src/app/primer/primer.page.html
+++ b/src/app/primer/primer.page.html
@@ -50,7 +50,7 @@
       <h5>H5: Diferentes párrafos con estilo</h5>
     </ion-text>
     <p>
-      "La mayoría de softwareacualmente es muy parecido
+      "La mayoría de software actualmente es muy parecido
       a una pirámide egipcia, con millones de
       <ion-text color="danger"><sub>ladrillos</sub></ion-text>puestos unnos encima de otros sin una estructura
       integral,<ion-text color="primary"><i> simplemente
